2011-11-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/DevDetails.pm:
	The following methods are deprecated and will be phased out:
	storeSnmpVars(), hasOID(), snmpVar(), getSnmpIndices().
	$dd->walkSnmpTable() should be used instead.

2011-11-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configs/torrus-config.pl: New config variables for Syslog:
	$Torrus::Log::syslogFacility = 'local0';
	$Torrus::Collector::useSyslog = 1;
	$Torrus::Monitor::useSyslog = 1;

	* bin/monitor.in: disabled log rotation on SIGHUP. Syslog
	logging enabled by default.

	* bin/collector.in: disabled log rotation on SIGHUP. Syslog
	logging enabled by default.

	* perllib/Torrus/Log.pm: Syslog logging for daemons.

2011-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	ifSpeed monitoring is triggered by $interface->{'ifSpeedMonitoring'}.
	The bandwidth usage templates are updated accordingly.

2011-10-12  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC4319_HDSL2_SHDSL_LINE_MIB.pm:
	new discovery module for HDSL2-SHDSL-LINE-MIB

	* xmlconfig/generic/rfc2863.if-mib.xml: added templates for
	ifSpeed and ifHighSpeed

2011-10-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoFirewall.pm: interface filter
	that removes TunnelN interfaces.

2011-09-04  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Torrus release 2.01

2011-06-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* xmlconfig/snmp-defs.xml: RRA for SNMP reachability is separately
	defined. New discovery parameter: snmp-reachability-rra.

2011-06-07  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector.pm (beforeRun): Collector
	initialization exclusive lock is enabled by
	$Torrus::Collector::exclusiveStartupLock in torrus-siteconfig.pl
